@@ -194,7 +194,7 @@ void CForecastIO::GetMeterDetails()
 		tsen.TEMP_HUM_BARO.packettype=pTypeTEMP_HUM_BARO;
 		tsen.TEMP_HUM_BARO.subtype=sTypeTHB1;
 		tsen.TEMP_HUM_BARO.battery_level=9;
-		tsen.TEMP_HUM_BARO.rssi=6;
+		tsen.TEMP_HUM_BARO.rssi=12;
 		tsen.TEMP_HUM_BARO.id1=0;
 		tsen.TEMP_HUM_BARO.id2=1;
 
@@ -225,7 +225,7 @@ void CForecastIO::GetMeterDetails()
 		tsen.TEMP_HUM.packettype=pTypeTEMP_HUM;
 		tsen.TEMP_HUM.subtype=sTypeTH5;
 		tsen.TEMP_HUM.battery_level=9;
-		tsen.TEMP_HUM.rssi=6;
+		tsen.TEMP_HUM.rssi=12;
 		tsen.TEMP_HUM.id1=0;
 		tsen.TEMP_HUM.id2=1;
 
@@ -248,7 +248,7 @@ void CForecastIO::GetMeterDetails()
 		tsen.TEMP.packettype=pTypeTEMP;
 		tsen.TEMP.subtype=sTypeTEMP10;
 		tsen.TEMP.battery_level=9;
-		tsen.TEMP.rssi=6;
+		tsen.TEMP.rssi=12;
 		tsen.TEMP.id1=0;
 		tsen.TEMP.id2=1;
 
@@ -319,7 +319,7 @@ void CForecastIO::GetMeterDetails()
 		tsen.WIND.packettype=pTypeWIND;
 		tsen.WIND.subtype=sTypeWIND4;
 		tsen.WIND.battery_level=9;
-		tsen.WIND.rssi=6;
+		tsen.WIND.rssi=12;
 		tsen.WIND.id1=0;
 		tsen.WIND.id2=1;
 
@@ -378,7 +378,7 @@ void CForecastIO::GetMeterDetails()
 				tsen.UV.packettype=pTypeUV;
 				tsen.UV.subtype=sTypeUV1;
 				tsen.UV.battery_level=9;
-				tsen.UV.rssi=6;
+				tsen.UV.rssi=12;
 				tsen.UV.id1=0;
 				tsen.UV.id2=1;
 
@@ -402,7 +402,7 @@ void CForecastIO::GetMeterDetails()
 				tsen.RAIN.packettype=pTypeRAIN;
 				tsen.RAIN.subtype=sTypeRAINWU;
 				tsen.RAIN.battery_level=9;
-				tsen.RAIN.rssi=6;
+				tsen.RAIN.rssi=12;
 				tsen.RAIN.id1=0;
 				tsen.RAIN.id2=1;
 
