@@ -159,7 +159,7 @@ void CTE923::GetSensorDetails()
 				tsen.TEMP_HUM_BARO.packettype=pTypeTEMP_HUM_BARO;
 				tsen.TEMP_HUM_BARO.subtype=sTypeTHBFloat;
 				tsen.TEMP_HUM_BARO.battery_level=9;
-				tsen.TEMP_HUM_BARO.rssi=6;
+				tsen.TEMP_HUM_BARO.rssi=12;
 				tsen.TEMP_HUM_BARO.id1=0;
 				tsen.TEMP_HUM_BARO.id2=ii;
 
@@ -185,7 +185,7 @@ void CTE923::GetSensorDetails()
 				tsen.TEMP_HUM.packettype=pTypeTEMP_HUM;
 				tsen.TEMP_HUM.subtype=sTypeTH5;
 				tsen.TEMP_HUM.battery_level=9;
-				tsen.TEMP_HUM.rssi=6;
+				tsen.TEMP_HUM.rssi=12;
 				tsen.TEMP_HUM.id1=0;
 				tsen.TEMP_HUM.id2=ii;
 
@@ -209,7 +209,7 @@ void CTE923::GetSensorDetails()
 			tsen.TEMP.packettype=pTypeTEMP;
 			tsen.TEMP.subtype=sTypeTEMP10;
 			tsen.TEMP.battery_level=9;
-			tsen.TEMP.rssi=6;
+			tsen.TEMP.rssi=12;
 			tsen.TEMP.id1=0;
 			tsen.TEMP.id2=ii;
 
@@ -230,7 +230,7 @@ void CTE923::GetSensorDetails()
 			tsen.HUM.packettype=pTypeHUM;
 			tsen.HUM.subtype=sTypeHUM2;
 			tsen.HUM.battery_level=9;
-			tsen.HUM.rssi=6;
+			tsen.HUM.rssi=12;
 			tsen.HUM.id1=0;
 			tsen.HUM.id2=ii;
 
@@ -250,7 +250,7 @@ void CTE923::GetSensorDetails()
 		tsen.WIND.packettype=pTypeWIND;
 		tsen.WIND.subtype=sTypeWINDNoTemp;
 		tsen.WIND.battery_level=9;
-		tsen.WIND.rssi=6;
+		tsen.WIND.rssi=12;
 		tsen.WIND.id1=0;
 		tsen.WIND.id2=1;
 
@@ -308,7 +308,7 @@ void CTE923::GetSensorDetails()
 		tsen.RAIN.packettype=pTypeRAIN;
 		tsen.RAIN.subtype=sTypeRAIN3;
 		tsen.RAIN.battery_level=9;
-		tsen.RAIN.rssi=6;
+		tsen.RAIN.rssi=12;
 		tsen.RAIN.id1=0;
 		tsen.RAIN.id2=1;
 
@@ -333,7 +333,7 @@ void CTE923::GetSensorDetails()
 		tsen.UV.packettype=pTypeUV;
 		tsen.UV.subtype=sTypeUV1;
 		tsen.UV.battery_level=9;
-		tsen.UV.rssi=6;
+		tsen.UV.rssi=12;
 		tsen.UV.id1=0;
 		tsen.UV.id2=1;
 
